services/rooms-mongo/mongodb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rooms-mongo
  labels:
    app: rooms-mongo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rooms-mongo
  template:
    metadata:
      labels:
        app: rooms-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
