services/rooms-mongo/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rooms-mongo-mongodb
spec:
  selector:
    app: rooms-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None  # This makes it a headless service
